/*
 * Copyright 2023 tison <wander4096@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package morax.bookie;

option java_package = "org.tisonkun.morax.proto.bookie";
option java_multiple_files = true;
option java_outer_classname = 'BookieProtos';
option java_generate_equals_and_hash = true;

service BookieService {
  rpc addEntry(AddEntryRequest) returns (AddEntryReply) {}
  rpc readEntry(ReadEntryRequest) returns (ReadEntryReply) {}
}

message AddEntryRequest {
  EntryProto entry = 1;
}

message AddEntryReply {
  int64 ledgerId = 1;
  int64 entryId = 2;
}

message ReadEntryRequest {
  int64 ledgerId = 1;
  int64 entryId = 2;
}

message ReadEntryReply {
  EntryProto entry = 1;
}

message EntryProto {
  int64 ledgerId = 1;
  int64 entryId = 2;
  int64 lastConfirmed = 3;
  bytes payload = 4;
}
